hotfixed spacing issue

--- a/debtcalc.css
+++ b/debtcalc.css
@@ -40,7 +40,7 @@ body {
 }
 
 #settings {
-    padding: 5px 35px;
+    padding: 5px 30px;
 }
 
 #custom_target {
